--- a/mobile/public/index.html
+++ b/mobile/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Mercure POC</title>
     <link rel="shortcut icon" type="image/png" href="favicon.ico">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
   </head>
   <body>
     <div id="app"></div>
